* Revert default svcstatus page refresh interval from 30s back to 60s
* Re-introduce XYMWEBREFRESH variable to control refresh interval
* HTML encode most fields on info page
* Restrict characters allowed for hostnames and testnames
* HTML encode error log output on xymond/net/gen pages
* HTML encode ghost hostnames output on xymond/ghostlist pages


Changes from 4.3.24 -> 4.3.25 (05 Feb 2016)
===========================================

* rev 7890

* Resolve buffer overflow when handling "config" file requests (CVE-2016-2054)
* Restrict "config" files to regular files inside the $XYMONHOME/etc/ directory
  (symlinks disallowed) (CVE-2016-2055). Also, require that the initial filename
  end in '.cfg' by default
* Resolve shell command injection vulnerability in useradm and chpasswd CGIs
  (CVE-2016-2056)
* Tighten permissions on the xymond BFQ used for message submission to restrict
  access to the xymon user and group. It is now 0620. (CVE-2016-2057)
* Restrict javascript execution in current and historical status messages by
  the addition of appropriate Content-Security-Policy headers to prevent XSS
  attacks. (CVE-2016-2058)

We would like to thank Markus Krell for reporting the above issues, and for 
working with us to resolve them.


* Fix "TRENDS" entries in hosts.cfg improperly handling partial matches with
  other graph names (Reported by Jeremy Laidman)
* A possible crash in when loading confreport.cgi has been fixed 
  (Thanks, Axel Beckert)
* Improve error handling slightly in the CGI wrapper
* Fix missing network interface graph data on FreeBSD (Niko <nicolas@lienard.name>)
* In xymonnet, a rare SSL error state that could occur after a 
  connection is opened will now be considered "service down"
* Fix a crash in xymonnet when handling certain malformed SSL certificates
  (Reported by Thomas Leavitt, originally via Jeremy Laidman)
* Add new trends_header and trends_footer for use on associated Trends pages